--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <header><img src="logo.png" alt="Logo" width="250px"></header>
     <main>
+        <h1>Sorteio da echo dot 5ª Geração</h1>
         <img src="https://assets.mmsrg.com/isr/166325/c1/-/ASSET_MMS_98657855/fee_786_587_png" alt="Imagem">
         <button id="sortear">Sortear</button>
         <div id="countdown" style="display: none; font-size: 80px; color: #333; text-align: center; margin-top: 20px;"></div>
